--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "frontend:watch": "NODE_ENV=development webpack --watch",
     "git:pre-commit-hook": "npm run format:check && npm run lint && npm test",
     "postinstall": "npm run setup:husky && npm run build",
-    "lint": "run-s lint:js lint:scss lint:types",
+    "lint": "run-s lint:js lint:scss",
     "lint:fix": "eslint . --fix",
     "lint:js": "eslint .",
     "lint:types": "tsc --build tsconfig.json",
